# exlytics

./: .credo.exs  .dockerignore  .formatter.exs  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  database.sql  docker-compose.yml  go.mod  go.sum  main.go  mix.exs  package-lock.json  package.json  pyproject.toml  start_local_database.sh
.github/: dependabot.yml
.github/workflows/: branch-protection.yaml  build.yml  cd.yml  ci.yml  continuous-delivery.yaml  continuous-integration.yml  integration.yml  production.yml  test.yml
apps/collector/: Dockerfile  mix.exs
apps/dashboard/: .gitignore  cache_manifest.json  mix.exs
apps/data/: .gitignore  Dockerfile  mix.exs
config/: config.exs  dev.exs  production.exs  releases.exs  test.exs
exlytics/: main.py  utils.py  view.py
k8s/: deployment.yaml  gateway.yaml  httproute.yaml  namespace.yaml  patch.yaml  service.yaml
k8s/base/: cronjob.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/integration/: kustomization.yaml
k8s/production/: kustomization.yaml
lib/: analytics.ex  exlytics.ex  router.ex  scheduler.ex
lib/data/: account.ex  event.ex  repo.ex
lib/exlytics/: aggregation.ex  cache.ex  event.ex  events_router.ex  metadata_parser.ex  release.ex  repo.ex  router.ex  storage.ex  worker.ex
lib/storage/: google_storage.ex  postgresql.ex
migrations/: 0000_create_events.sql  0001_rename_columns.sql  0002_add_indices.sql  0003_rename_columns.sql  202103260825_create_schema.sql  202103260826_create_events.sql  schema.sql
priv/: create.sql  create_test.sql  seeds.exs
router/: event_writer.go  router.go
src/: errors.rs  main.rs  middleware.rs  utilities.rs
test/: analytics_test.exs  events_router_test.exs  metadata_parser_test.exs  router_test.exs  test_helper.exs
tests/: test_exlytics.py
(+81 files in other folders)
