[package]
name = "exlytics"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "3.2" }
tokio = { version = "1.43", features = ["full"] }
httparse = { version = "1.9" }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
