[package]
name = "exlytics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97" }
axum = { version = "0.8.3", default-features = false, features = ["http1", "tokio", "tracing", "json"] }
opentelemetry = { version = "0.29.1" }
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry-stdout = { version = "0.29.0" }
opentelemetry_sdk = { version = "0.29.0" }
serde_json = "1.0.140"
tokio = { version = "1.43", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-util = { version = "0.7.14" }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
