[tool.poetry]
name = "exlytics"
version = "1.0.0"
description = ""
authors = ["Cory Buecker <email@corybuecker.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
asyncpg = "0.22.0"
uvloop = { git = "git://github.com/MagicStack/uvloop.git", branch="master" }
sanic = { git = "git://github.com/sanic-org/sanic.git", branch="main" }
ujson = "4.0.2"
multidict = "5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
